<resources>
    <string name="app_name">Library</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="books_list">Liste des livres</string>
    <string name="book_title">Titre: %s</string>
    <string name="book_author">Auteur: %s</string>
    <string name="book_resume">Resumé: %s</string>
    <string name="book_keywords">Keywords: %s</string>
    <string name="delete_book">Supprimer le livre</string>
    <string name="update_book">Modifier le livre</string>
    <string name="create_book">Ajouter un livre</string>
    <string name="title">Titre</string>
    <string name="author">Auteur</string>
    <string name="resume">Resumé</string>
    <string name="keywords">Mot Clé</string>
    <string name="add_book">Ajouter le livre</string>
    <string name="book_add_success">Livre bien ajouté</string>
    <string name="cancel">Annuler</string>
</resources>